// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Foot should render correctly with L size 1`] = `
.c9 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c10 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c7 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c2 {
  padding: 0;
  margin: 0;
  display: flex;
  list-style: none;
  flex-direction: row;
}

.c2 li {
  margin: 0 0.4rem;
}

.c2 li:last-child {
  margin-right: 0.8rem;
}

.c2 li:first-child {
  margin-left: 0.8rem;
}

.c3>li {
  margin: 0;
}

.c4 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
}

.c4:hover {
  cursor: pointer;
}

.c4:focus {
  outline: none;
}

.c4:disabled {
  cursor: not-allowed;
}

.c5 {
  background: #ffffff;
}

.c5>.c6,
.c5 .c6 {
  padding: 0.4rem;
}

.c5 .c6 * {
  fill: #435465;
}

.c5:disabled {
  background: #ffffff;
}

.c5:disabled .c6 * {
  fill: #C7D0D8;
}

.c5:not(:disabled):hover {
  background: #F7F8F9;
}

.c5:not(:disabled):hover .c6 * {
  fill: #303C48;
}

.c5:not(:disabled):active {
  background: #eff2f4;
}

.c5:not(:disabled):active .c6 * {
  fill: #13181D;
}

.c0 {
  display: flex;
  align-items: center;
  position: sticky;
  left: 0;
  bottom: 0;
  z-index: 3;
  background-color: #ffffff;
  min-height: 4.8rem;
  border-top: 0.1rem solid #C7D0D8;
}

.c1 {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: row;
  padding: 0 1.6rem 0 0.8rem;
}

.c1 td {
  padding: 0;
}

.c1 td>.c8 {
  font-size: 1.2rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
}

<div>
  <tfoot
    class="c0"
  >
    <tr
      class="c1"
    >
      <td>
        <ul
          class="c2 c3 "
          data-testid="foot-pagination"
          tablesize="L"
          variant="horizontal"
        >
          <li>
            <button
              class="c4 c5"
              disabled=""
              type="button"
            >
              <svg
                class="c6 c7"
                fill="none"
                height="1em"
                title="prev"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 6.705a.996.996 0 0 0-1.41 0L9 11.295a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41l-3.88-3.89L15 8.115c.39-.39.38-1.03 0-1.41z"
                  fill="#000"
                  fill-opacity=".54"
                />
              </svg>
            </button>
          </li>
          <li>
            <button
              class="c4 c5"
              disabled=""
              type="button"
            >
              <svg
                class="c6 c7"
                fill="none"
                height="1em"
                title="next"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 6.71a.996.996 0 0 0 0 1.41L12.88 12 9 15.88a.996.996 0 1 0 1.41 1.41L15 12.7a.996.996 0 0 0 0-1.41L10.41 6.7c-.38-.38-1.02-.38-1.41.01z"
                  fill="#000"
                  fill-opacity=".54"
                />
              </svg>
            </button>
          </li>
        </ul>
      </td>
      <td>
        <span
          class="c8 c9"
          textalign="initial"
          textcolor="inherit"
        >
          Viewing
        </span>
        <strong
          class="c8 c10"
          textalign="initial"
          textcolor="inherit"
          textweight="Strong"
        >
           0 - 0 
        </strong>
        <span
          class="c8 c9"
          textalign="initial"
          textcolor="inherit"
        >
          of
        </span>
        <strong
          class="c8 c10"
          textalign="initial"
          textcolor="inherit"
          textweight="Strong"
        >
           0 
        </strong>
        <span
          class="c8 c9"
          textalign="initial"
          textcolor="inherit"
        >
          Results
        </span>
      </td>
    </tr>
  </tfoot>
</div>
`;

exports[`Table Foot should render correctly with M size 1`] = `
.c9 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c10 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c7 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c2 {
  padding: 0;
  margin: 0;
  display: flex;
  list-style: none;
  flex-direction: row;
}

.c2 li {
  margin: 0 0.4rem;
}

.c2 li:last-child {
  margin-right: 0.8rem;
}

.c2 li:first-child {
  margin-left: 0.8rem;
}

.c3>li {
  margin: 0;
}

.c4 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
}

.c4:hover {
  cursor: pointer;
}

.c4:focus {
  outline: none;
}

.c4:disabled {
  cursor: not-allowed;
}

.c5 {
  background: #ffffff;
}

.c5>.c6,
.c5 .c6 {
  padding: 0.4rem;
}

.c5 .c6 * {
  fill: #435465;
}

.c5:disabled {
  background: #ffffff;
}

.c5:disabled .c6 * {
  fill: #C7D0D8;
}

.c5:not(:disabled):hover {
  background: #F7F8F9;
}

.c5:not(:disabled):hover .c6 * {
  fill: #303C48;
}

.c5:not(:disabled):active {
  background: #eff2f4;
}

.c5:not(:disabled):active .c6 * {
  fill: #13181D;
}

.c0 {
  display: flex;
  align-items: center;
  position: sticky;
  left: 0;
  bottom: 0;
  z-index: 3;
  background-color: #ffffff;
  min-height: 4.8rem;
  border-top: 0.1rem solid #C7D0D8;
}

.c1 {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: row;
  padding: 0 1.6rem 0 0.8rem;
}

.c1 td {
  padding: 0;
}

.c1 td>.c8 {
  font-size: 1.2rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
}

<div>
  <tfoot
    class="c0"
  >
    <tr
      class="c1"
    >
      <td>
        <ul
          class="c2 c3 "
          data-testid="foot-pagination"
          tablesize="M"
          variant="horizontal"
        >
          <li>
            <button
              class="c4 c5"
              disabled=""
              type="button"
            >
              <svg
                class="c6 c7"
                fill="none"
                height="1em"
                title="prev"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 6.705a.996.996 0 0 0-1.41 0L9 11.295a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41l-3.88-3.89L15 8.115c.39-.39.38-1.03 0-1.41z"
                  fill="#000"
                  fill-opacity=".54"
                />
              </svg>
            </button>
          </li>
          <li>
            <button
              class="c4 c5"
              disabled=""
              type="button"
            >
              <svg
                class="c6 c7"
                fill="none"
                height="1em"
                title="next"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 6.71a.996.996 0 0 0 0 1.41L12.88 12 9 15.88a.996.996 0 1 0 1.41 1.41L15 12.7a.996.996 0 0 0 0-1.41L10.41 6.7c-.38-.38-1.02-.38-1.41.01z"
                  fill="#000"
                  fill-opacity=".54"
                />
              </svg>
            </button>
          </li>
        </ul>
      </td>
      <td>
        <span
          class="c8 c9"
          textalign="initial"
          textcolor="inherit"
        >
          Viewing
        </span>
        <strong
          class="c8 c10"
          textalign="initial"
          textcolor="inherit"
          textweight="Strong"
        >
           0 - 0 
        </strong>
        <span
          class="c8 c9"
          textalign="initial"
          textcolor="inherit"
        >
          of
        </span>
        <strong
          class="c8 c10"
          textalign="initial"
          textcolor="inherit"
          textweight="Strong"
        >
           0 
        </strong>
        <span
          class="c8 c9"
          textalign="initial"
          textcolor="inherit"
        >
          Results
        </span>
      </td>
    </tr>
  </tfoot>
</div>
`;

exports[`Table Foot should render correctly with S size 1`] = `
.c9 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c10 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c7 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c2 {
  padding: 0;
  margin: 0;
  display: flex;
  list-style: none;
  flex-direction: row;
}

.c2 li {
  margin: 0 0.4rem;
}

.c2 li:last-child {
  margin-right: 0.8rem;
}

.c2 li:first-child {
  margin-left: 0.8rem;
}

.c3>li {
  margin: 0;
}

.c4 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
}

.c4:hover {
  cursor: pointer;
}

.c4:focus {
  outline: none;
}

.c4:disabled {
  cursor: not-allowed;
}

.c5 {
  background: #ffffff;
}

.c5>.c6,
.c5 .c6 {
  padding: 0.4rem;
}

.c5 .c6 * {
  fill: #435465;
}

.c5:disabled {
  background: #ffffff;
}

.c5:disabled .c6 * {
  fill: #C7D0D8;
}

.c5:not(:disabled):hover {
  background: #F7F8F9;
}

.c5:not(:disabled):hover .c6 * {
  fill: #303C48;
}

.c5:not(:disabled):active {
  background: #eff2f4;
}

.c5:not(:disabled):active .c6 * {
  fill: #13181D;
}

.c0 {
  display: flex;
  align-items: center;
  position: sticky;
  left: 0;
  bottom: 0;
  z-index: 3;
  background-color: #ffffff;
  min-height: 4.8rem;
  border-top: 0.1rem solid #C7D0D8;
}

.c1 {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: row;
  padding: 0 1.6rem 0 0.8rem;
}

.c1 td {
  padding: 0;
}

.c1 td>.c8 {
  font-size: 1.2rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
}

<div>
  <tfoot
    class="c0"
  >
    <tr
      class="c1"
    >
      <td>
        <ul
          class="c2 c3 "
          data-testid="foot-pagination"
          tablesize="S"
          variant="horizontal"
        >
          <li>
            <button
              class="c4 c5"
              disabled=""
              type="button"
            >
              <svg
                class="c6 c7"
                fill="none"
                height="1em"
                title="prev"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 6.705a.996.996 0 0 0-1.41 0L9 11.295a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41l-3.88-3.89L15 8.115c.39-.39.38-1.03 0-1.41z"
                  fill="#000"
                  fill-opacity=".54"
                />
              </svg>
            </button>
          </li>
          <li>
            <button
              class="c4 c5"
              disabled=""
              type="button"
            >
              <svg
                class="c6 c7"
                fill="none"
                height="1em"
                title="next"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 6.71a.996.996 0 0 0 0 1.41L12.88 12 9 15.88a.996.996 0 1 0 1.41 1.41L15 12.7a.996.996 0 0 0 0-1.41L10.41 6.7c-.38-.38-1.02-.38-1.41.01z"
                  fill="#000"
                  fill-opacity=".54"
                />
              </svg>
            </button>
          </li>
        </ul>
      </td>
      <td>
        <span
          class="c8 c9"
          textalign="initial"
          textcolor="inherit"
        >
          Viewing
        </span>
        <strong
          class="c8 c10"
          textalign="initial"
          textcolor="inherit"
          textweight="Strong"
        >
           0 - 0 
        </strong>
        <span
          class="c8 c9"
          textalign="initial"
          textcolor="inherit"
        >
          of
        </span>
        <strong
          class="c8 c10"
          textalign="initial"
          textcolor="inherit"
          textweight="Strong"
        >
           0 
        </strong>
        <span
          class="c8 c9"
          textalign="initial"
          textcolor="inherit"
        >
          Results
        </span>
      </td>
    </tr>
  </tfoot>
</div>
`;

exports[`Table Foot should render correctly with XS size 1`] = `
.c9 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c10 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 700;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c7 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c7 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c2 {
  padding: 0;
  margin: 0;
  display: flex;
  list-style: none;
  flex-direction: row;
}

.c2 li {
  margin: 0 0.4rem;
}

.c2 li:last-child {
  margin-right: 0.8rem;
}

.c2 li:first-child {
  margin-left: 0.8rem;
}

.c3>li {
  margin: 0;
}

.c4 {
  margin: 0.4rem;
  height: 3.2rem;
  width: 3.2rem;
  display: block;
  border-radius: 50%;
  user-select: none;
  border: none;
  padding: 0;
  text-align: center;
  transition: all 100ms ease-out;
  color: #435465;
  background: #ffffff;
}

.c4:hover {
  cursor: pointer;
}

.c4:focus {
  outline: none;
}

.c4:disabled {
  cursor: not-allowed;
}

.c5 {
  background: #ffffff;
}

.c5>.c6,
.c5 .c6 {
  padding: 0.4rem;
}

.c5 .c6 * {
  fill: #435465;
}

.c5:disabled {
  background: #ffffff;
}

.c5:disabled .c6 * {
  fill: #C7D0D8;
}

.c5:not(:disabled):hover {
  background: #F7F8F9;
}

.c5:not(:disabled):hover .c6 * {
  fill: #303C48;
}

.c5:not(:disabled):active {
  background: #eff2f4;
}

.c5:not(:disabled):active .c6 * {
  fill: #13181D;
}

.c0 {
  display: flex;
  align-items: center;
  position: sticky;
  left: 0;
  bottom: 0;
  z-index: 3;
  background-color: #ffffff;
  min-height: 4.8rem;
  border-top: 0.1rem solid #C7D0D8;
}

.c1 {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-direction: row;
  padding: 0 1.6rem 0 0.8rem;
}

.c1 td {
  padding: 0;
}

.c1 td>.c8 {
  font-size: 1.2rem;
  letter-spacing: 0.12rem;
  line-height: 2.0rem;
}

<div>
  <tfoot
    class="c0"
  >
    <tr
      class="c1"
    >
      <td>
        <ul
          class="c2 c3 "
          data-testid="foot-pagination"
          tablesize="XS"
          variant="horizontal"
        >
          <li>
            <button
              class="c4 c5"
              disabled=""
              type="button"
            >
              <svg
                class="c6 c7"
                fill="none"
                height="1em"
                title="prev"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15 6.705a.996.996 0 0 0-1.41 0L9 11.295a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41l-3.88-3.89L15 8.115c.39-.39.38-1.03 0-1.41z"
                  fill="#000"
                  fill-opacity=".54"
                />
              </svg>
            </button>
          </li>
          <li>
            <button
              class="c4 c5"
              disabled=""
              type="button"
            >
              <svg
                class="c6 c7"
                fill="none"
                height="1em"
                title="next"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 6.71a.996.996 0 0 0 0 1.41L12.88 12 9 15.88a.996.996 0 1 0 1.41 1.41L15 12.7a.996.996 0 0 0 0-1.41L10.41 6.7c-.38-.38-1.02-.38-1.41.01z"
                  fill="#000"
                  fill-opacity=".54"
                />
              </svg>
            </button>
          </li>
        </ul>
      </td>
      <td>
        <span
          class="c8 c9"
          textalign="initial"
          textcolor="inherit"
        >
          Viewing
        </span>
        <strong
          class="c8 c10"
          textalign="initial"
          textcolor="inherit"
          textweight="Strong"
        >
           0 - 0 
        </strong>
        <span
          class="c8 c9"
          textalign="initial"
          textcolor="inherit"
        >
          of
        </span>
        <strong
          class="c8 c10"
          textalign="initial"
          textcolor="inherit"
          textweight="Strong"
        >
           0 
        </strong>
        <span
          class="c8 c9"
          textalign="initial"
          textcolor="inherit"
        >
          Results
        </span>
      </td>
    </tr>
  </tfoot>
</div>
`;
